# ani-scrapy

./: .gitignore  .ignore  AGENTS.md  CONTRIBUTING.md  README.md  llms.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tmp.py
.github/workflows/: publish.yml
ani_scrapy/async_api/: browser.py
ani_scrapy/async_api/scrapers/animeflv/: scraper.py
ani_scrapy/async_api/scrapers/jkanime/: scraper.py
ani_scrapy/core/constants/: general.py
ani_scrapy/sync_api/scrapers/animeflv/: scraper.py
ani_scrapy/sync_api/scrapers/jkanime/: scraper.py
anime_scraper/: __init__.py  base.py  browser_manager.py  constants.py  logging.py  schemas.py  tab_link.py
anime_scraper/scrapers/animeflv/: __init__.py  constants.py  file_link.py  scraper.py  tab_link.py  utils.py
anime_scraper/scrapers/jkanime/: __init__.py  constants.py  file_link.py  scraper.py
docs/: 01-scrapers.md  API_REFERENCE.md  README.md  index.md
docs/api_reference/: 01_architecture.md  02_schemas.md  03_scrapers.md  04_browser.md  05_exceptions.md  index.md
docs/contributor_guide/: 01_contributing.md  02_adding_scrapers.md  03_testing.md  index.md
docs/troubleshooting/: 01_common_issues.md
docs/user_guide/: 01_getting_started.md  02_quickstart.md  03_browser_usage.md  04_diagnostics.md  index.md
examples/: 01_basic_search.py  02_anime_info.py  03_download_links.py  04_browser_usage.py  05_concurrent_scraping.py  05_task_tracking.py  06_concurrent_scraping.py  06_error_handling.py  07_error_handling.py  07_logging_configuration.py  08_file_download_links.py  08_logging_configuration.py  09_file_download_links.py  09_shared_browser.py  __init__.py  index.md
scripts/: benchmark_providers.py
src/ani_scrapy/: __init__.py
src/ani_scrapy/animeflv/: __init__.py  constants.py  parser.py  scraper.py
src/ani_scrapy/cli/: __init__.py  doctor.py  main.py
src/ani_scrapy/core/: __init__.py  base.py  browser.py  http.py  log.py  schemas.py
src/ani_scrapy/core/constants/: __init__.py  general.py
src/ani_scrapy/jkanime/: __init__.py  constants.py  parser.py  scraper.py
src/ani_scrapy/providers/animeav1/: __init__.py  constants.py  parser.py  (+1 more)
tests/: conftest.py
tests/async_api/: animeflv.py  jkanime.py
tests/fixtures/html/: animeflv_anime.html  animeflv_search.html  jkanime_anime.html  jkanime_search.html
tests/sync_api/: animeflv.py  jkanime.py
tests/unit/test_animeflv/: test_parser.py
tests/unit/test_core/: test_http.py  test_schemas.py
tests/unit/test_jkanime/: test_parser.py
(+10 files in other folders)
