[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-anime-scraper"
version = "0.1.0"
description = "Async-first Python library for scraping anime websites, currently supporting AnimeFLV"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "github:ElPitagoras14", email = "jonfrgar@espol.edu.ec" }
]
keywords = ["anime", "scraping", "playwright", "async", "python"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
  "aiohttp>=3.12,<4.0",
  "beautifulsoup4>=4.13,<5.0",
  "playwright>=1.53,<2.0",
  "lxml>=6.0,<7.0",
  "loguru>=0.7,<1.0"
]

[project.urls]
Homepage = "https://github.com/ElPitagoras14/py-anime-scraper"
Repository = "https://github.com/ElPitagoras14/py-anime-scraper"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "black",
  "flake8",
  "mypy",
  "isort"
]
